--- a/app/views/pages/homevendedor.ejs
+++ b/app/views/pages/homevendedor.ejs
@@ -464,7 +464,7 @@
           <h3 class="artigo-text">BOSS | MILÃO | VERÃO |</h3>
           <br>
             <p class="texto-esquerda">
-          <a href="/blogadm" class="link-preto">Editar</a>
+          <a href="/blog" class="link-preto">Ver Mais</a>
           </p>
         </section>
       <!--                               seção artigos ocultos para mobile                                       -->
